<resources>

    <!-- firebase / firestore nodes ref-->
    <string name="users_ref">Users</string>
    <string name="chatroom_ref">Chatroom</string>
    <string name="contacts_ref">Contacts</string>
    <string name="chats_ref">Chats</string>
    <string name="messages_ref">Messages</string>
    <string name="collection_user_location">User location</string>


    <!-- firebase / firestore fields-->
    <string name="status_db">status</string>
    <string name="user_state_db">userState</string>
    <string name="state_db">state</string>
    <string name="date_db">date</string>
    <string name="time_db">time</string>
    <string name="typing_db">typing</string>
    <string name="name_db">name</string>
    <string name="email_db">email</string>
    <string name="password_db">password</string>
    <string name="image_db">image</string>
    <string name="imageThumbnail_db">imageThumbnail</string>
    <string name="token_db">token</string>
    <string name="contact_status_db">contact_status</string>
    <string name="sende_db">sender</string>
    <string name="type_db">type</string>
    <string name="no_db">no</string>
    <string name="yes_db">yes</string>
    <string name="notifications_ref">Notifications</string>
    <string name="chats_requests_ref">Chat_Requests</string>
    <string name="online_db">Online</string>
    <string name="offline_db">Offline</string>
    <string name="message_db">message</string>
    <string name="sende_id_db">senderID</string>
    <string name="receiver_id_db">receiverID</string>
    <string name="message_date_db">messageDate</string>
    <string name="message_time_db">messageTime</string>
    <string name="message_id_db">messageID</string>
    <string name="seen_db">seen</string>

    <!-- layout texts -->
    <string name="app_name">ChatUp</string>
    <string name="register">Register</string>
    <string name="signOut">Sign out</string>
    <string name="allUsers">All users</string>
    <string name="createNewAccount">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="noEmptyField">Every field must filled</string>
    <string name="loginError">Error, check your credentials</string>
    <string name="accountSetting">Account Settings</string>
    <string name="requests">Requests</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="chatRoom">Chat Room</string>
    <string name="signing_Out">See you later!</string>
    <string name="password_Length">Password must be at least 7 characters long</string>
    <string name="password_check">Password must match</string>
    <string name="account_created">Account created!</string>
    <string name="welcome">Welcome!</string>
    <string name="server_error">Server error, try again later!</string>
    <string name="dontHaveAccount">Don\'t have account yet?</string>
    <string name="createAccount">create one here!</string>
    <string name="email_exist">Email already in use</string>
    <string name="updateStatus">Update Status</string>
    <string name="user_status">User Status</string>
    <string name="user_displayName">Your display name</string>
    <string name="enterEmail">Enter your email address</string>
    <string name="recoverPassword">Please check you mailbox</string>
    <string name="enterEmailForRecovery">You must enter a valid email address</string>
    <string name="toolbarRecoveryPasswordTitle">Password Recovery</string>
    <string name="passwordForgot">Forgot your password?</string>
    <string name="username">Username</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="save">Save</string>
    <string name="statusToolbar">Status</string>
    <string name="status_updated">Status updated!</string>
    <string name="send">Send</string>
    <string name="sendPassword">Send Password</string>
    <string name="error">Error</string>
    <string name="check_your_email">Please check your email</string>
    <string name="profile">Profile</string>
    <string name="createGroup">Create group</string>
    <string name="exampleHint">e.g : Best friends</string>
    <string name="create">Create</string>
    <string name="enterGroupName">You must enter a group name</string>
    <string name="cancel">Cancel</string>
    <string name="groupCreated">Group created</string>
    <string name="groups">Groups</string>
    <string name="chat">Chats</string>
    <string name="textHint">Here is your message</string>
    <string name="writeMessageHint">Write your message here</string>
    <string name="status">Status</string>
    <string name="settingsName">Name:</string>
    <string name="settingsStatus">Status:</string>
    <string name="alertDialogTitle">You are signing out</string>
    <string name="alertDialogMessage">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sendChatRequest">Send chat request</string>
    <string name="cancelChatRequest">Cancel chat request</string>
    <string name="canceledChatRequest">Canceled chat request</string>
    <string name="chatRequestSent">Chat request sent</string>
    <string name="editProfile">Edit profile</string>
    <string name="changeImage">Change Image</string>
    <string name="rejectRequest">Reject request</string>
    <string name="acceptChatRequest">Accept chat request</string>
    <string name="chatRequestRejected">Chat request rejected</string>
    <string name="chatRequestAccepted">Chat request accepted</string>
    <string name="removeContact">Remove contact</string>
    <string name="sendMessage">Send message</string>
    <string name="contactRemoved">Contact removed</string>
    <string name="friendAdded">Friend added</string>
    <string name="noEmptyFieldAllowed">Field must not be empty</string>
    <string name="statusCannotBeEmpty">Status cannot be empty</string>
    <string name="wantsToConnect">Wants to be your friend</string>
    <string name="sent_chat_request">Sent you a chat request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="textChatHint">Type your message here</string>
    <string name="deleteContact">Delete contact</string>
    <string name="deleteContactMessage">Are you sure you want to delete this contact?</string>
    <string name="drawerOpen">Drawer Open</string>
    <string name="drawerClose">Drawer Close</string>
    <string name="signUp">Sign up</string>
    <string name="lastSeen">Last seen: </string>
    <string name="activeNow">Active now</string>
    <string name="Offline">Offline"</string>
    <string name="typing">Typing…</string>
    <string name="Choose_file">Choose file</string>
    <string name="photo">Photo</string>
    <string name="PDF">PDF file</string>
    <string name="Word_Document">Word document</string>
    <string name="Delete">Delete</string>
    <string name="Delete_for_me">Delete for me</string>
    <string name="Delete_message">Delete message</string>
    <string name="account">Account</string>
    <string name="maps">Maps</string>
    <string name="new_status">New status</string>
    <string name="maps_API_KEY">AIzaSyCTmwtkbw81CCk0fV8thEdue73pVZ9akck</string>
    <string name="location_permission_requiered">Permission denied, it\'s required in order to share your location</string>
    <string name="share_location">Share location</string>
    <string name="other_user_location_off">Contact is not sharing location</string>
    <string name="open_location">Open location</string>
    <string name="open_location_message">You must provide your location in order to open this message, do you agree?</string>
    <string name="sharing_location">Location</string>
    <string name="close_map_message">Do you want to stop sharing your location?</string>
    <string name="close_location">Close location room</string>
    <string name="permission_required">Permission required</string>
    <string name="GPS_Required">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="read_storage_enabled">Now yo can send Photos and Documents</string>
    <string name="open_camera">Camera</string>
    <string name="place_username">Username</string>
    <string name="dialog_location">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="updating_location">Updating your current location</string>
    <string name="working_background">It\'s running in the background</string>
    <string name="check_your_inbox">Please verify your email</string>
    <string name="insert_phone_number">Phone number including country code</string>
    <string name="name">Name</string>
    <string name="you">You</string>
    <string name="request_decline">Request declined</string>
    <string name="sharing_current_location">Sharing current location.</string>


</resources>
