<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Activities.OtherUserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/otherUsersImgProf"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/profile_image"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal" >


        <TextView
            android:id="@+id/usernameOtherUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/username"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/statusOtherUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_status"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            android:textStyle="italic" />

    </LinearLayout>



    <Button
        android:id="@+id/buttonOtherUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sendChatRequest"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="85dp"
        android:textColor="@color/color_white" />




</LinearLayout>