<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
    tools:context=".views.PhoneRegisterFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="125dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPhoneNumberNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPhoneNumberTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_phone_number"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:visibility="invisible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginCodeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type verification code"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/TextLabel"/>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btnSendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Send code"
            android:textColor="@color/color_white"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="25dp"
            android:layout_marginStart="114dp"
            android:layout_marginLeft="114dp"
            android:layout_marginEnd="115dp"
            android:layout_marginRight="115dp" />

        <Button
            android:id="@+id/btnLoginCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="@color/color_white"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="25dp"
            android:layout_marginStart="114dp"
            android:layout_marginLeft="114dp"
            android:layout_marginEnd="115dp"
            android:layout_marginRight="115dp"/>


</LinearLayout>